--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@iconify-json/lucide": "^1.2.68",
     "@iconify-json/radix-icons": "^1.2.5",
     "@number-flow/vue": "^0.4.8",
+    "@nuxt/fonts": "0.11.4",
+    "@nuxt/icon": "^1.15.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.5.5",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/vue-table": "^8.21.3",
     "@unovis/ts": "^1.6.1",
@@ -42,54 +46,50 @@
     "@uploadthing/nuxt": "^7.1.10",
     "@uploadthing/vue": "^7.3.3",
     "@upstash/qstash": "^2.8.4",
-    "consola": "^3.4.2",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
-    "embla-carousel": "^8.6.0",
-    "embla-carousel-vue": "^8.6.0",
-    "human-id": "^4.1.3",
-    "nanoid": "^5.1.6",
-    "pg": "^8.16.3",
-    "qrcode": "^1.5.3",
-    "reka-ui": "^2.6.1",
-    "tailwindcss": "^4.1.14",
-    "tw-animate-css": "^1.4.0",
-    "uuid": "^13.0.0",
-    "vue-draggable-next": "^2.3.0",
-    "vue-draggable-plus": "^0.6.0"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^6.1.0",
-    "@nuxt/eslint": "^1.9.0",
-    "@nuxt/fonts": "0.11.4",
-    "@nuxt/icon": "^1.15.0",
-    "@nuxtjs/color-mode": "^3.5.2",
-    "@pinia/nuxt": "^0.5.5",
-    "@types/jsdom": "^27.0.0",
-    "@types/pg": "^8.15.6",
-    "@types/qrcode": "^1.5.6",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.1.0",
     "@vueuse/math": "^12.8.2",
     "@vueuse/nuxt": "^12.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "consola": "^3.4.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.7",
-    "eslint": "^9.37.0",
-    "eslint-plugin-format": "^1.0.2",
+    "drizzle-orm": "^0.44.7",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
+    "human-id": "^4.1.3",
     "lucide-vue-next": "^0.482.0",
+    "nanoid": "^5.1.6",
     "nuxt": "^4.1.3",
-    "sass-embedded": "^1.93.2",
+    "pg": "^8.16.3",
+    "qrcode": "^1.5.3",
+    "reka-ui": "^2.6.1",
     "shadcn-nuxt": "2.3.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.1.14",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
+    "vue-draggable-next": "^2.3.0",
+    "vue-draggable-plus": "^0.6.0",
     "vue-router": "^4.5.1",
     "vue-sonner": "^2.0.9",
     "vue-tsc": "^2.2.12"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^6.1.0",
+    "@nuxt/eslint": "^1.9.0",
+    "@types/jsdom": "^27.0.0",
+    "@types/pg": "^8.15.6",
+    "@types/qrcode": "^1.5.6",
+    "eslint": "^9.37.0",
+    "eslint-plugin-format": "^1.0.2",
+    "sass-embedded": "^1.93.2"
   }
 }
